fixed navbar and z-index added mobile menu close onClikc of home

--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -17,14 +17,16 @@
     margin-bottom: 12px;
 } 
 
+.gallery .pics:hover{
+    filter: opacity(.75)
+}
+
 @media (max-width: 991px){
     .gallery{
         -webkit-column-count: 2;
         -moz-column-count: 2;
         column-count: 2;
     }
-
-    
 }
 
 @media (max-width: 480px){
